--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,20 @@
 PORT=3000
-BASE_URL=https://yourdomain.com  # أو ngrok URL للـstaging
+BASE_URL=https://alma-store.vercel.app
 
 SUPABASE_URL=https://...supabase.co
 SUPABASE_KEY=service_role_or_anon_key
 
 OPENAI_API_KEY=sk-...
-OPAL_API_KEY=opal-...   # إذا متوفر، وإلا استخدم Gemini/OpenAI
+OPAL_API_KEY=opal-...
 
-TELEGRAM_BOT_TOKEN=123456:ABC-...
-TELEGRAM_WEBHOOK_SECRET=telegram_webhook_secret
+# Telegram configuration
+TELEGRAM_BOT_TOKEN=8200666953:AAE42wjbuiUpcBXPGSolMJtipzofUaz6Kqw
+TELEGRAM_WEBHOOK_SECRET=alma_secret_2025
 
+# WhatsApp integration (optional)
 WHATSAPP_PHONE_ID=1234567890
 WHATSAPP_TOKEN=EAAJ...
 
+# Security and queue
 HMAC_SECRET=super-secret-for-verifying-opal-or-other-webhooks
 QUEUE_REDIS_URL=redis://localhost:6379
-
-
