fix: Remove static export and fix admin login
- Removed 'output: export' from next.config.js to support API routes
- Updated admin login API to support both plain password and SHA256 hash
- Added ADMIN_PASSWORD and ADMIN_PASSWORD_HASH environment variables
- Updated .env.example with proper configuration
- Added comprehensive Vercel deployment guide
- Build tested successfully with server-side API routes

Fixes:
- API routes now work correctly (marked as λ Server)
- Admin login will work on both local and Vercel deployment
- Supports both development (plain password) and production (hash) modes

Password: ali98myoo
Hash: aa01dee2e4aa9d10dc039ad90b1bfbf827104b7cd79d51478319d4fe2809d49c

--- a/.env.example
+++ b/.env.example
@@ -1,20 +1,23 @@
-PORT=3000
-BASE_URL=https://alma-store.vercel.app
+# Supabase Configuration
+NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key_here
+SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key_here
 
-SUPABASE_URL=https://...supabase.co
-SUPABASE_KEY=service_role_or_anon_key
+# JWT Secret for Admin Authentication
+JWT_SECRET=change-this-to-a-random-secret-key
 
-OPENAI_API_KEY=sk-...
-OPAL_API_KEY=opal-...
+# Admin Password Configuration
+# For local development, use plain password
+ADMIN_PASSWORD=your_password_here
 
-# Telegram configuration
-TELEGRAM_BOT_TOKEN=7648530662:AAEbhhKyKh82Zc98IG8Cuzg85Dt31dpgX8k
-TELEGRAM_WEBHOOK_SECRET=alma_secret_2025
+# For production (Vercel), use SHA256 hash
+# Generate hash: echo -n "your_password" | sha256sum
+ADMIN_PASSWORD_HASH=your_password_hash_here
 
-# WhatsApp integration (optional)
-WHATSAPP_PHONE_ID=1234567890
-WHATSAPP_TOKEN=EAAJ...
+# Optional: Telegram Bot Configuration
+TELEGRAM_BOT_TOKEN=your_telegram_bot_token
+TELEGRAM_WEBHOOK_SECRET=your_webhook_secret
 
-# Security and queue
-HMAC_SECRET=super-secret-for-verifying-opal-or-other-webhooks
-QUEUE_REDIS_URL=redis://localhost:6379
+# Optional: WhatsApp Integration
+WHATSAPP_PHONE_ID=your_phone_id
+WHATSAPP_TOKEN=your_whatsapp_token
