feat: Replace password auth with GitHub OAuth
✅ Added NextAuth.js with GitHub Provider
✅ Created middleware for admin route protection
✅ New modern login page with GitHub OAuth button
✅ Removed old password-based authentication system
✅ Added comprehensive setup documentation

Breaking Changes:
- ADMIN_PASSWORD and ADMIN_PASSWORD_HASH no longer used
- New env vars required: GITHUB_CLIENT_ID, GITHUB_CLIENT_SECRET, NEXTAUTH_SECRET, ADMIN_ALLOWED_EMAILS

See docs/GITHUB_AUTH_SETUP.md for setup instructions

--- a/.env.example
+++ b/.env.example
@@ -1,23 +1,16 @@
 # Supabase Configuration
 NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
-NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key_here
-SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key_here
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key-here
+SUPABASE_SERVICE_ROLE_KEY=your-service-role-key-here
 
-# JWT Secret for Admin Authentication
-JWT_SECRET=change-this-to-a-random-secret-key
+# NextAuth Configuration
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_SECRET=generate-with-openssl-rand-base64-32
 
-# Admin Password Configuration
-# For local development, use plain password
-ADMIN_PASSWORD=your_password_here
+# GitHub OAuth
+# Get these from: https://github.com/settings/developers
+GITHUB_CLIENT_ID=your-github-client-id
+GITHUB_CLIENT_SECRET=your-github-client-secret
 
-# For production (Vercel), use SHA256 hash
-# Generate hash: echo -n "your_password" | sha256sum
-ADMIN_PASSWORD_HASH=your_password_hash_here
-
-# Optional: Telegram Bot Configuration
-TELEGRAM_BOT_TOKEN=your_telegram_bot_token
-TELEGRAM_WEBHOOK_SECRET=your_webhook_secret
-
-# Optional: WhatsApp Integration
-WHATSAPP_PHONE_ID=your_phone_id
-WHATSAPP_TOKEN=your_whatsapp_token
+# Admin Allowed Emails (comma-separated)
+ADMIN_ALLOWED_EMAILS=your-email@example.com
